--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -2,7 +2,7 @@
  * Themes
  ******************************************************************************/
 
-@use "sass:color";
+@use 'sass:color';
 
 :root {
   --global-bg-color: #{$white-color};
@@ -20,9 +20,9 @@
   --global-card-bg-color: #{$white-color};
   --global-highlight-color: #{$red-color-dark};
   --global-back-to-top-bg-color: rgba(
-    #{color.channel($black-color, "red", $space: rgb)},
-    #{color.channel($black-color, "green", $space: rgb)},
-    #{color.channel($black-color, "blue", $space: rgb)},
+    #{color.channel($black-color, 'red', $space: rgb)},
+    #{color.channel($black-color, 'green', $space: rgb)},
+    #{color.channel($black-color, 'blue', $space: rgb)},
     0.4
   );
   --global-back-to-top-text-color: #{$white-color};
@@ -75,7 +75,7 @@
   }
 }
 
-html[data-theme="dark"] {
+html[data-theme='dark'] {
   --global-bg-color: #{$grey-color-dark};
   --global-code-bg-color: #{$code-bg-color-dark};
   --global-text-color: #{$grey-color-light};
@@ -90,9 +90,9 @@ html[data-theme="dark"] {
   --global-divider-color: #424246;
   --global-card-bg-color: #{$grey-900};
   --global-back-to-top-bg-color: rgba(
-    #{color.channel($white-color, "red", $space: rgb)},
-    #{color.channel($white-color, "green", $space: rgb)},
-    #{color.channel($white-color, "blue", $space: rgb)},
+    #{color.channel($white-color, 'red', $space: rgb)},
+    #{color.channel($white-color, 'green', $space: rgb)},
+    #{color.channel($white-color, 'blue', $space: rgb)},
     0.5
   );
   --global-back-to-top-text-color: #{$black-color};
@@ -121,7 +121,7 @@ html[data-theme="dark"] {
   }
 }
 
-html[data-theme-setting="dark"] {
+html[data-theme-setting='dark'] {
   #light-toggle-system {
     display: none;
   }
@@ -142,7 +142,7 @@ html[data-theme-setting="dark"] {
   }
 }
 
-html[data-theme-setting="light"] {
+html[data-theme-setting='light'] {
   #light-toggle-system {
     display: none;
   }
